Simple changes for Sonar warnings
Change-Id: I180c828485beccd7944c61a8e58d42b909333a41